--- a/WebNpm/wwwroot/css/app.css
+++ b/WebNpm/wwwroot/css/app.css
@@ -12,6 +12,7 @@ h1 {
     font-family: sans-serif;
     min-width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    z-index:99;
 }
 .styled-table thead tr {
     background-color: #009879;
@@ -39,6 +40,10 @@ h1 {
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+body {
+    background: lightblue;
 }
 
 a, .btn-link {
